# pico-projects

./: .gitignore  .gitmodules
lib/: README.md
projects/adc_multiple_continuous/: CMakeLists.txt  README.md
projects/adc_multiple_continuous/src/: main.cpp  main.cpp.old  main.cpp.old_2dmas
projects/dma_uart_tx/: CMakeLists.txt  README.md
projects/dma_uart_tx/src/: main.cpp
projects/edf_scheduling/: CMakeLists.txt  README.md
projects/edf_scheduling/src/: main.cpp
projects/hardware_alarm/: CMakeLists.txt  README.md
projects/hardware_alarm/src/: main.cpp
projects/hash_table/: CMakeLists.txt  README.md
projects/hash_table/src/: main.cpp
projects/multicore_data_sharing/: CMakeLists.txt
projects/multicore_data_sharing/src/: main.cpp
projects/systick/: CMakeLists.txt  README.md
projects/systick/src/: main.cpp
